@@ -5,7 +5,7 @@
 '\" See the file "license.terms" for information on usage and redistribution
 '\" of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 '\" 
-'\" RCS: @(#) $Id: Tk_Main.3,v 1.7 2008/06/30 22:57:02 dkf Exp $
+'\" RCS: @(#) $Id: Tk_Main.3,v 1.8 2008/12/15 16:17:18 dgp Exp $
 '\" 
 .so man.macros
 .TH Tk_Main 3 4.0 Tk "Tk Library Procedures"
@@ -57,5 +57,11 @@ typedef int \fBTcl_AppInitProc\fR(
 \fIAppInitProc\fR is almost always a pointer to \fBTcl_AppInit\fR;
 for more details on this procedure, see the documentation
 for \fBTcl_AppInit\fR.
+.PP
+\fBTk_Main\fR functions much the same as \fBTcl_Main\fR.  In particular,
+\fBTk_Main\fR supports both an interactive mode and a startup script
+mode, with the file name and encoding of a startup script under the
+control of the \fBTcl_SetStartupScript\fR and \fBTcl_GetStartupScript\fR
+routines.
 .SH KEYWORDS
 application-specific initialization, command-line arguments, main program
